TestSuite/Syntax/Errors/Milestone1.tjp
project test "test" "1.0" 2003-01-01 - 2003-01-31

task m "Milestone" {
	milestone
	start 2003-01-02
	end 2003-01-03
}

